--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@
   <div class="container">  
     <div class="navbar navbar-fixed-top"> 
       <div class="container header"> 
-        <a class="logo1" href="/"><%=image_tag asset_path("blue/rain.png"), :width => 48, :title => "首页" %></a>
+        <a class="logo1" href="/public_share"><%=image_tag asset_path("blue/rain.png"), :width => 48, :title => "首页" %></a>
         <%= render 'layouts/navigation' %>
       </div>
     </div>
