--- a/app/views/site_items/_show.html.erb
+++ b/app/views/site_items/_show.html.erb
@@ -1,10 +1,12 @@
-
+<td>
 	<b><%= site_item.site_title.to_s.truncate(42) %></b>
 	(<%= link_to site_item.site_url.to_s.truncate(42), site_item.site_url, :target => '_blank' %>)
 
 	<% if !(site_item.site_username.blank? && site_item.site_password.blank?) %>
 		用户名：<%= site_item.site_username %> &nbsp;密码：<%= site_item.site_password %>, <%= site_item.site_password_tips %>
 	<% end %>
+</td>
+<td width="80">
 	<span class="pull-right text-right">
 		<%= link_to site_item_path(site_item), data: { toggle: "modal", target: "#ajax-modal" } do %>
 		  <i class="icon-eye-open"></i>
@@ -18,4 +20,4 @@
 		  <i class="icon-trash"></i>
 		<% end %>
 	</span> 
-
+</td>
