--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -20,5 +20,5 @@
     <% end %>
     
   </ul>
-  <h3 class="muted logo"><span class="blue">雨服务</span></h3>
+  <h3 class="muted logo"><span class="blue"><a href="/">雨服务</a></span></h3>
 </div>
