--- a/app/views/site_items/show.html.erb
+++ b/app/views/site_items/show.html.erb
@@ -7,15 +7,15 @@
 </p>
 
 <p>
-  用户名：<%= @site_item.site_username %>
+  网站使用用户名：<%= @site_item.site_username %>
 </p>
 
 <p>
-  密码：<%= @site_item.site_password %>
+  网站使用密码：<%= @site_item.site_password %>
 </p>
 
 <p>
-  密码提示：<%= @site_item.site_password_tips %>
+  网站使用密码提示：<%= @site_item.site_password_tips %>
 </p>
 
 <p>
