--- a/app/views/site_items/index.html.erb
+++ b/app/views/site_items/index.html.erb
@@ -1,7 +1,7 @@
-<ul>
+<table class="table table-striped table-hover">
   <% @site_items.each do |site_item| %>
-    <li><%= render :partial => "site_items/show", :locals => {:site_item => site_item} %></li>
+    <tr><%= render :partial => "site_items/show", :locals => {:site_item => site_item} %></tr>
   <% end %>
-</ul>
+</table>
 
-<%#= will_paginate @site_items %>
+<%= will_paginate @site_items %>
