Add friend link

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -184,3 +184,13 @@ footer .content{
 .tag a{
   color: #fff;
 }
+
+.friend-link a{
+  padding: 6px;
+  margin: 20px 4px;
+  width: 120px;
+}
+
+.friend-link a:hover{
+  background: #ccc;
+}
