--- a/app/views/home/public_share.html.erb
+++ b/app/views/home/public_share.html.erb
@@ -1,6 +1,6 @@
 <%=render :partial => 'site_item_list' %>
 
-<div class="text-right">
+<div class="text-right" style="height: 100px;">
 	<span id="loading-holder"></span>
 	<% if @site_items.size > 5%>
 	  <a id="pagination_ajax_title" class="btn btn-info" href="javascript: void(0);">点击获取更多...</a>
