--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -5,6 +5,13 @@
 		 <hr>
 		 蜀ICP备12014566号； &copy;2013<br>
 		</div>
+		<div class="content text-center">
+			<ul class="breadcrumb">
+			  <li><a href="/">首页</a> <span class="divider">/</span></li>
+			  <li><script src="http://s96.cnzz.com/stat.php?id=5590228&web_id=5590228" language="JavaScript"></script> <span class="divider">/</span></li>
+			  <li><a href="/friend_link">友情链接</a> <span class="divider">/</span></li>
+			</ul>
+		</div>
 	</div>
 </div>
 </footer>
