--- a/app/views/home/friend_link.html.erb
+++ b/app/views/home/friend_link.html.erb
@@ -35,8 +35,8 @@
 	<td><span class="friend-link"><a href="http://www.yeeyan.org/" target="_blank">译言</a></span></td>
 	<td><span class="friend-link"><a href="http://9.douban.com/" target="_blank">九点</a></span></td>
 	<td><span class="friend-link"><a href="http://www.36kr.com/" target="_blank">36Kr</a></span></td>
-	<td><span class="friend-link"><a href="http://9.douban.com/" target="_blank">九点</a></span></td>
-	<td>&nbsp;</td>
+	<td><span class="friend-link"><a href="http://www.65960.com/" target="_blank">65智能营销系统</a></span></td>
+	<td><span class="friend-link"><a href="http://www.yufuwu.cn/" target="_blank">雨服务</a></span></td>
 	<td>&nbsp;</td>
 	</tr>
 </table>
