--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,8 @@
     <meta name="author" content="master@inruby.com" />
     <link type="text/plain" rel="author" href="http://www.yufuwu.org/humans.txt" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= content_for?(:title) ? yield(:title) : "雨服务" %></title>
-    <meta name="description" content="<%= content_for?(:description) ? yield(:description) : "雨服务" %>">
+    <title><%= content_for?(:title) ? yield(:title) : "DaIII书签" %></title>
+    <meta name="description" content="<%= content_for?(:description) ? yield(:description) : "DaIII书签" %>">
     <%= stylesheet_link_tag "application", :media => "all" %>
     <%= javascript_include_tag "application" %>
     <!--[if IE]>
