--- a/app/views/home/index_static.html.erb
+++ b/app/views/home/index_static.html.erb
@@ -6,7 +6,7 @@
 <div class="alert alert-block">
   <button type="button" class="close" data-dismiss="alert">&times;</button>
   <h4><%= Time.now.strftime("%Y-%m-%d") %>:</h4>
-  已经有<%= 300 + User.all.size %>个网友正在使用雨服务收藏他们喜欢的网页...
+  已经有<%= 300 + User.all.size %>个网友正在使用DaIII书签收藏他们喜欢的网页...
 </div>
 
 <div class="">
@@ -14,10 +14,10 @@
   <p>互联网是一个浩大而神奇的地方，充满着令人激动的页面和信息，我们不时想要回到某个页面。那么，随之而来的问题，当你打开你的书签和… …你可能不记得站点的名称，或忘了你把它放在什么文件夹，或者你无法在成堆的文件夹里把它给翻出来！
 	</p><p>
 	你不是唯一出现这种情况的人。这也是为什么有那么多的新型网站上线，提供给你全新的和直观的方式来收藏和保存网址内容。
-	雨服务就是其中一个，帮助你收藏喜欢的网页，单纯的、私密的---只是收藏。希望你喜欢!</p>
+	DaIII书签就是其中一个，帮助你收藏喜欢的网页，单纯的、私密的---只是收藏。希望你喜欢!</p>
 
   <p>
-  通过云计算轻松收藏网址；通过雨服务提升使用价值。</p>
+  通过云计算轻松收藏网址；通过DaIII书签提升使用价值。</p>
 
   <center><p><br>
     <a href="/users/sign_up" class="btn btn-primary btn-large">现在就试 »</a>
@@ -29,7 +29,7 @@
 <div id="full-width" class="modal container hide fade container-narrow" tabindex="-1">
   <div class="modal-header">
     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-    <h3>雨服务网址收藏后台效果.</h3>
+    <h3>DaIII书签网址收藏后台效果.</h3>
   </div>
   <div class="modal-body" style="text-align: center;">
       <%=image_tag "/assets/demo.png" %>
